<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="showsDetailsVm"
            type="com.gibsoncodes.movieapp.ui.main.viewmodels.ShowsDetailsVm" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_56"
        android:id="@+id/detailContainerView"
        tools:context=".ui.details.ShowsDetailsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/top_layout"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/movieThumbnail"
                    android:layout_width="60dp"
                    android:layout_margin="10dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/view_pager_pic_1"
                    app:showsDetailThumbnail="@{showsDetailsVm.show.backdropPath}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:ems="12"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@{showsDetailsVm.show.name}"
                    tools:text="Fast And Furious Presents Hobbs And Shaw"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/created_by"
                android:layout_marginStart="25dp"
                android:layout_below="@id/top_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:createdBy="@{showsDetailsVm.show.createdBy}"
                android:textColor="@color/black70"
                tools:text="created by David Benioff"
                android:layout_marginBottom="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/runTime"
                android:layout_marginStart="25dp"
                android:layout_below="@id/created_by"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:episodeRuntime="@{showsDetailsVm.show.episodeRunTime}"
                android:textColor="@color/black70"
                tools:text="116 . mins"
                android:layout_marginBottom="10dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/movieBackdrop"
                android:layout_width="400dp"
                android:layout_margin="15dp"
                android:elevation="8dp"
                android:layout_below="@id/runTime"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/view_pager_pic_1"
                app:showsDetailsImage="@{showsDetailsVm.show.backdropPath}" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_below="@id/movieBackdrop"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="end"
                        android:id="@+id/secondLAyout"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="30dp"
                            app:srcCompat="@drawable/rating"
                            android:layout_marginEnd="10dp"
                            android:layout_height="30dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:id="@+id/voteCount"
                            tools:text="7.4"
                            android:layout_marginEnd="30dp"
                            app:moviesAverageCount="@{showsDetailsVm.show.voteAverage}"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="350dp"
                        android:background="@color/white"
                        android:layout_below="@id/secondLAyout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        app:cardElevation="8dp"
                        android:id="@+id/third_layout"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView"
                        android:layout_height="250dp">

                        <View
                            android:layout_width="3dp"
                            android:background="@drawable/genre_rectangle"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_height="65dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="35dp"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black70"
                            android:layout_height="wrap_content"
                            android:text="@string/in_production" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginStart="35dp"
                            android:textSize="20sp"
                            android:gravity="center"
                            tools:text="true"
                            app:inProduction="@{showsDetailsVm.show.inProduction}"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="3dp"
                            android:background="@drawable/status_background"
                            android:layout_marginTop="120dp"
                            android:layout_marginStart="20dp"
                            android:layout_height="100dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="120dp"
                            android:layout_marginStart="35dp"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textColor="@color/black70"
                            android:layout_height="wrap_content"
                            android:text="@string/released" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="150dp"
                            android:layout_marginStart="35dp"
                            android:textSize="16sp"
                            android:gravity="center"
                            tools:text="released"
                            android:text="@{showsDetailsVm.show.status}"
                            android:drawablePadding="5dp"
                            android:drawableStart="@drawable/released"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="190dp"
                            android:layout_marginStart="35dp"
                            android:textSize="16sp"
                            android:gravity="center"
                            tools:text="scripted"
                            android:text="@{showsDetailsVm.show.type}"
                            android:drawablePadding="5dp"
                            android:drawableStart="@drawable/released"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content" />

                        <com.gibsoncodes.movieapp.common.CircleProgressBar
                            android:layout_width="100dp"
                            app:progressbarColor="@color/colorPrimary"
                            android:layout_gravity="end"
                            android:layout_marginEnd="30dp"
                            android:layout_marginTop="20dp"
                            app:progressBarThickness="4dp"
                            app:moviesPopularityCount="@{showsDetailsVm.show.popularity}"
                            android:layout_height="100dp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="140dp"
                            android:layout_marginEnd="35dp"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_gravity="end"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:text="@string/Metacritic" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="350dp"
                        android:background="@color/white"
                        android:layout_below="@id/third_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="25dp"
                        app:cardElevation="8dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/overview_layout"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.OverviewCard"
                        android:layout_height="280dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_marginTop="25dp"
                                android:layout_marginStart="15dp"
                                android:textSize="20sp"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:id="@+id/storyLineLabel"
                                android:layout_height="wrap_content"
                                android:text="@string/storyline" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_marginTop="10dp"
                                android:layout_marginStart="15dp"
                                android:textColor="@color/black70"
                                android:layout_marginEnd="5dp"
                                android:id="@+id/movieOverview"
                                android:textSize="16sp"
                                android:gravity="center"
                                android:text="@{showsDetailsVm.show.overview}"
                                tools:text="@string/movie_overviewtest"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </RelativeLayout>
            </androidx.core.widget.NestedScrollView>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>